Add landing page endpoint
